k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-node-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-node-app

  template:
    metadata:
      labels:
        app: devops-node-app

    spec:
      containers:
      - name: node-app
        image: kam810/devops-node-app:latest
        ports:
        - containerPort: 3000
