k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-node-app-service

spec:
  selector:
    app: devops-node-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

  type: NodePort
