k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-node-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: devops-node.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-node-app-service
            port:
              number: 80
